<SupervisorApp> - Add close button - Modify layout

--- a/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidget.form
+++ b/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidget.form
@@ -27,26 +27,30 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" alignment="0" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="49" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="desc" min="-2" pref="156" max="-2" attributes="0"/>
-                  <Component id="name" min="-2" pref="156" max="-2" attributes="0"/>
-                  <Component id="quantity" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
-                  <Component id="warehouseId" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
-                  <Component id="stationId" min="-2" pref="156" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="createWidget" min="-2" pref="168" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="closebtn" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel1" alignment="0" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="49" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="desc" min="-2" pref="156" max="-2" attributes="0"/>
+                          <Component id="name" min="-2" pref="156" max="-2" attributes="0"/>
+                          <Component id="quantity" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
+                          <Component id="warehouseId" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
+                          <Component id="stationId" min="-2" pref="156" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
-              <Component id="addWidget" min="-2" pref="197" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,7 +83,10 @@
                   <Component id="stationId" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Component id="addWidget" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="createWidget" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="closebtn" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -123,12 +130,12 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="addWidget">
+    <Component class="javax.swing.JButton" name="createWidget">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Add Widget"/>
+        <Property name="text" type="java.lang.String" value="Create New Widget"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addWidgetActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="createWidgetActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
@@ -142,6 +149,14 @@
           <Connection code="new javax.swing.DefaultComboBoxModel(new String[] {&quot;Item 1&quot;})" type="code"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="closebtn">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Close"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="closebtnActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
