[DALTest] Added OrdersByPhone
[DALTest] Added OrdersByPhone

--- a/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
+++ b/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
@@ -180,6 +180,7 @@
                           <Component id="jbtnBackorderedOrders" max="32767" attributes="0"/>
                           <Component id="jbtnShippingOrders" alignment="0" max="32767" attributes="0"/>
                           <Component id="jbtnPendingOrders" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jbtnOrdersByPhone" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace pref="204" max="32767" attributes="0"/>
                   </Group>
@@ -194,7 +195,9 @@
                       <Component id="jbtnShippingOrders" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnBackorderedOrders" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="105" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jbtnOrdersByPhone" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="76" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -222,6 +225,14 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnBackorderedOrdersActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnOrdersByPhone">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Get Orders By Phone"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnOrdersByPhoneActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
